--- a/styles/style.css
+++ b/styles/style.css
@@ -1,13 +1,20 @@
-div{
-    background-color: chartreuse;
-    padding: 10px;
-    margin-bottom: 10px;
+*{
+    margin: 0;
+    padding: 0;
+}
+body{
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
+}
+
+#header{
+    text-align: center;
+    margin-top: 40px;
 }
 
 img{
     width: 100%;
     height: 500px;
 }
-.s{
+.pic{
     width: 75%;
 }
