--- a/styles/style.css
+++ b/styles/style.css
@@ -1,20 +1,78 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
-body{
-    font-family:Verdana, Geneva, Tahoma, sans-serif;
+
+body {
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    background: linear-gradient(to top right, #525252, #3d72b4);
 }
 
-#header{
+#header {
     text-align: center;
     margin-top: 40px;
+    margin-bottom: 30px;
+    text-decoration: underline;
+    /* text-decoration-style: solid; */
 }
 
-img{
+.card {
+    border: none;
+    padding: 10px;
+    margin: 20px 20px 15px;
+    width: 20%;
+    display: inline-block;
+    height: 550px;
+    background-image: linear-gradient(to top left, #304352, #d7d2cc);
+    border-radius: 15px;
+    box-shadow: 20px 20px 20px #05090c;
+}
+
+.pics {
+    width: 50%;
+    height: 150px;
+    margin-left: 25%;
+    margin-bottom: 10px;
+    border-radius: 50%;
+}
+
+h4 {
+    text-align: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.paragraph {
+    /* border: 1px solid black; */
+    border-radius: 15px 15px 20px;
+    padding: 10px;
+    text-align: justify;
+    box-shadow: 10px 10px 30px #262f36;
+    margin: 20px;
+}
+
+.list {
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+ol li {
+    margin-left: 20px;
+}
+
+.imgs {
     width: 100%;
     height: 500px;
+    margin-left: 20px;
 }
-.pic{
+
+.pic {
     width: 75%;
+    margin-top: 50px;
+    margin-left: 20px;
+}
+
+.lul {
+    text-align: center;
+    margin-bottom: 10px;
 }
