--- a/styles/style.css
+++ b/styles/style.css
@@ -22,14 +22,14 @@ body {
 .card {
     border: none;
     padding: 10px;
-    margin: 20px 20px 15px;
+    margin: 20px 20px  15px;
     width: 20%;
-    /* height: 100%; */
+    height: 100%;
     display: inline-block;
     background: linear-gradient(to top left, #304352, #d7d2cc);
     border-radius: 15px;
     box-shadow: 20px 20px 20px #05090c;
-
+    
 }
 
 .pics {
